--- a/website/src/components/sidebar/Sidebars.module.css
+++ b/website/src/components/sidebar/Sidebars.module.css
@@ -1,9 +1,16 @@
 .overlay {
   position: fixed;
   inset: 0;
-  /* background-color: white; */
-  /* backdrop-filter: blur(1px); */
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   z-index: 50;
+  opacity: 0; /* 처음엔 투명 */
+  transition: opacity 0.25s ease; /* 부드럽게 전환 */
+}
+
+.overlay.open {
+  opacity: 1; /* 활성화 시 보이기 */
 }
 
 .panel {
