--- a/website/src/app/shop/[slug]/detail.module.css
+++ b/website/src/app/shop/[slug]/detail.module.css
@@ -106,3 +106,33 @@
 .buy:hover {
   opacity: 0.92;
 }
+
+.checkbox {
+  appearance: none; /* 기본 체크박스 UI 제거 */
+  -webkit-appearance: none; /* Safari 대응 */
+  -moz-appearance: none;
+
+  width: 15px;
+  height: 15px;
+  border: 1px solid #111827; /* 네모 테두리 */
+  border-radius: 0; /* 둥근 모서리 제거 */
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  background: #fff; /* 선택 */
+}
+
+.checkbox:checked::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 12px; /* 아이콘 크기 */
+  height: 12px;
+  transform: translate(-50%, -50%);
+
+  background: url("/check.svg") no-repeat center center;
+  background-size: contain;
+  pointer-events: none;
+}
