--- a/website/src/app/(app)/about/page.module.css
+++ b/website/src/app/(app)/about/page.module.css
@@ -4,10 +4,20 @@
   margin: 0 auto;
   height: 100vh;
   display: flex;
+  flex-direction: column;
+  text-align: center;
   /* align-items: center; */
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .description {
-  margin-top: 300px;
+  margin-top: 100px;
+}
+
+.content {
+  margin-top: 20px;
+  padding: 10px 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
