--- a/website/src/components/sidebar/Sidebars.module.css
+++ b/website/src/components/sidebar/Sidebars.module.css
@@ -248,3 +248,34 @@
 .search:focus {
   outline: none;
 }
+
+.error {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  font-size: 12px;
+  color: red;
+  gap: 4px;
+}
+
+.content button.linklike {
+  color: inherit;
+  text-decoration: none;
+  font: inherit;
+  font-size: 15px;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-repeat: no-repeat;
+  background-size: 0% 1px;
+  background-position: left bottom;
+  transition: background-size 0.3s ease;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  text-align: left; /* 버튼은 기본적으로 가운데 정렬되므로 맞춰줌 */
+}
+
+
+.content button.linklike:hover {
+  background-size: 100% 1px;
+}
