--- a/website/src/app/(app)/about/page.module.css
+++ b/website/src/app/(app)/about/page.module.css
@@ -6,12 +6,19 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  /* align-items: center; */
+  align-items: center;
   /* justify-content: center; */
 }
 
+.graybox {
+  background-color: gray;
+  width: 50%;
+  height: 300px;
+  margin-top: 70px;
+}
+
 .description {
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .content {
