--- a/website/src/app/(app)/about/page.module.css
+++ b/website/src/app/(app)/about/page.module.css
@@ -11,7 +11,7 @@
 }
 
 .graybox {
-  background-color: gray;
+  background-color: rgb(189, 189, 189);
   width: 50%;
   height: 300px;
   margin-top: 70px;
@@ -27,4 +27,24 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 50px 0 0 0;
+  }
+
+  .graybox {
+    width: 100%;
+    height: 150px;
+    margin-top: 0px;
+  }
+
+  .description {
+    margin-top: -80px;
+  }
+
+  .content {
+    margin-top: 120px;
+  }
 }
